--- a/index.html
+++ b/index.html
@@ -55,16 +55,19 @@
                 <!-- animate__animated animate__shakeX -->
                 <div class="bio">
                     <h2 class="bio-title">Jocelyn Chen</h2>
-                    <p class="bio-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-                        dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-                        inventore tempore minus nemo, iste ullam illo laboriosam maiores
-                        repudiandae quos!
-                    </p>
                     <!-- typed bio -->
                     <div class="typing-container">
-                        <span id="sentence" class="sentence">Here, take this </span>
-                        <span id="feature-text"></span>
+                        <span
+                            class="txt-rotate"
+                            data-period="2000"
+                            data-rotate='[
+                                "Hello!", 
+                                "My name is Jocelyn Chen.", 
+                                "I am a Seattle-based designer.", 
+                                "I recently graduated from the University of Washington", 
+                                "Take a look around!" 
+                                ]'>
+                        </span>
                         <span class="input-cursor"></span>
                     </div>
                 </div>
