add links to projects

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         Worked with a research team on building a STEM resource hub for university students, 
                         leveraging research insights to frame design decisions.
                     </p>
-                    <a href="#" target="_blank" class="project-link">
+                    <a href="./uw-cerse-stem-equity-resource-hub.html" target="_self" class="project-link">
                         <button class="project button">Read Case Study &rarr; &#10142;</button>
                     </a>
                 </div>
@@ -115,7 +115,7 @@
                         Collaborated with a cross-functional team to reinvent and modernize existing client and candidate digital service products,
                         optimizing the user experience and accelerating business value objectives.
                     </p>
-                    <a href="#" target="_blank" class="project-link">
+                    <a href="./robert-half-digital-modernization.html" target="_self" class="project-link">
                         <button class="project button">Password Protected &rarr; &#10142;</button>
                     </a>
                 </div>
@@ -137,13 +137,13 @@
                     <p class="project-sponsor">
                         University of Washington HCDE 318 / Mobile App Design
                     </p>
-                    <a href="" target="" class="project-link">
+                    <a href="./husky-buddy.html" target="" class="project-link">
                         <h1 class="project-title">Husky Buddy: Creating Student Connections</h1>
                     </a>
                     <p class="project-paragraph">
                         Designed a mobile app to connect students and increase engagement during online learning.
                     </p>
-                    <a href="#" target="_blank" class="project-link">
+                    <a href="#" target="_self" class="project-link">
                         <button class="project button">Read Case Study &rarr; &#10142;</button>
                     </a>
                 </div>
