--- a/uw-cerse-stem-equity-resource-hub.html
+++ b/uw-cerse-stem-equity-resource-hub.html
@@ -21,7 +21,7 @@
         <nav>
             <a href=".." class="home-item">Jocelyn Chen</a>
             <ul class="nav-bar">
-                <li ><a href="#projects" class="nav-item">Projects</a></li>
+                <li ><a href="#projects" class="nav-item active">Projects</a></li>
                 <li ><a href="./about.html" class="nav-item">About</a></li>
                 <li ><a href="#contact" class="nav-item">Contact</a></li>
             </ul>
