password protect rh page

--- a/about.html
+++ b/about.html
@@ -1,18 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!--CSS Styles -->
-        <link rel="stylesheet" href="./assets/css/styles.css" />
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&family=Sofia+Sans:wght@400;600&display=swap" rel="stylesheet">
-        
+        <link rel="stylesheet" href="assets/css/styles.css" />
+
+        <!-- Animate CSS CDN -->
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
         <title>About | Jocelyn Chen's Portfolio</title>
     </head>
-
     <body>
-        <!-- Nav bar -->
         <nav>
             <a href=".." class="home-item">Jocelyn Chen</a>
             <ul class="nav-bar">
@@ -24,10 +27,10 @@
             <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
         </nav>
-
+        
         <!-- Hero Section -->
         <section class="hero" id="about">
-            <h2 class="header">  Hi there, a little about me..</h2>
+            <h2 class="header">  Hi there, here's a little about me..</h2>
             <div class="bio-container">
                 <img
                     src="./assets/images/profile.jpg"
@@ -53,6 +56,7 @@
             </div>
         </section>
 
+        <!-- More about me section -->
         <!-- More about me -->
         <section class="hero" id="more">
             <div class="grid-container">
@@ -89,7 +93,10 @@
                     </ul>
                 </div>  
             </div>
+        </section>
 
+        <!-- Contact section -->
+        <section class="contact-me">
 
         </section>
 
@@ -112,7 +119,7 @@
         </footer>
 
         <!-- Website scripts -->
-        <script src="./assets/js/app.js"></script>
+        <script src="assets/js/app.js"></script>
 
         <!-- Ion icons scripts -->
         <script
@@ -128,6 +135,6 @@
         <script 
             src="https://kit.fontawesome.com/a2a7dc6fc7.js" 
             crossorigin="anonymous">
-        </script>        
+        </script>
     </body>
 </html>
