--- a/uw-cerse-stem-equity-resource-hub.html
+++ b/uw-cerse-stem-equity-resource-hub.html
@@ -13,7 +13,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
-        <title>TITLE | Jocelyn Chen's Portfolio</title>
+        <title>UW CERSE STEM Equity Resource Hub | Jocelyn Chen's Portfolio</title>
   </head>
 
   <body>
@@ -21,7 +21,7 @@
         <nav>
             <a href=".." class="home-item">Jocelyn Chen</a>
             <ul class="nav-bar">
-                <li ><a href="#projects" class="nav-item active">Projects</a></li>
+                <li ><a href=".." class="nav-item active">Projects</a></li>
                 <li ><a href="./about.html" class="nav-item">About</a></li>
                 <li ><a href="#contact" class="nav-item">Contact</a></li>
             </ul>
@@ -32,8 +32,53 @@
         
         <!-- Hero Section -->
         <section class="hero" id="about">
-            <h2></h2>
-            <div class="hero-container">
+            <p>project img here</p>
+            <h1>UW CERSE</h1>
+            <h3>UW SERCH &#40;STEM Equity Resource Community Hub &#41;, a virtual extension of the UW LSAMP Center</h3>
+            <p>
+                For my HCDE Senior Capstone, my team and I partnered with the <b>UW Center for Evaluation & 
+                Research for STEM Equity (CERSE)</b>, a research center. The focus of our capstone project was 
+                to produce an interactive platform to connect students, staff, and faculty to campus resources 
+                supporting equitable student success in STEM.
+            </p>
+            <div class="project-context">
+                <div class="project-timeframe">
+                    <p><b>Timeframe</b></p>
+                    <p>January 2023 - June 2023</p>
+                </div>
+                <div class="project-team">
+                    <p><b>Team</b></p>
+                    <ul>
+                        <li>Rachel Chang</li>
+                        <li>Kayal Rajkumar</li>
+                        <li>Shreya Senthil</li>
+                    </ul>
+                </div>
+                <div class="project-contributions">
+                    <p><b>Key Contributions</b></p>
+                    <ul>
+                        <li>Product Design</li>
+                        <li>Client Communication</li>
+                        <li>User Research</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project-overview">
+                <p>Client Context</p>
+                <p>img of pnw lsamp schools</p>
+                <p>UW CERSE is a team of researchers who focus on conducting research to improve equity and broaden representation 
+                    in STEM fields in higher education. Their research is currently focusing on <b>PNW LSAMP (the Pacific Northwest 
+                    Louis Stokes Alliance for Minority Participation)</b>, which includes the University of Washington, 
+                    Washington State University, Oregon State University, Portland State University, and Boise State University. 
+                    From their research, they've observed that efforts related to improving STEM equity are often siloed, hard to locate, 
+                    and sometimes provide gaps in the types of support that students need. 
+                    
+                </p>
+            </div>
+            <div class="design-question">
+                <p>Design Question</p>
+                <p>How might we ... ?
+                </p>
             </div>
         </section>
 
