work on uw cerse case study

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!--CSS Styles -->
-        <link rel="stylesheet" href="assets/css/styles.css" />
+        <link rel="stylesheet" href="../assets/css/styles.css" />
 
         <!-- Animate CSS CDN -->
         <link
@@ -20,7 +20,7 @@
             <a href=".." class="home-item">Jocelyn Chen</a>
             <ul class="nav-bar">
                 <li ><a href=".." class="nav-item">Projects</a></li>
-                <li ><a href="./about.html" class="nav-item active">About</a></li>
+                <li ><a href="" class="nav-item active">About</a></li>
                 <li ><a href="#contact" class="nav-item">Contact</a></li>
             </ul>
             <button class="burger-menu" id="burger-menu">
@@ -30,10 +30,10 @@
         
         <!-- Hero Section -->
         <section class="hero" id="about">
-            <h2 class="header">  Hi there, here's a little about me..</h2>
+            <h1 class="header">  Hi there, here's a little about me..</h1>
             <div class="bio-container">
                 <img
-                    src="./assets/images/profile.jpg"
+                    src="../assets/images/profile.jpg"
                     alt="Jocelyn wearing coral t-shirt sitting in front of the Eiffel Tower"
                     loading="lazy"
                     class="hero-img"
@@ -61,7 +61,7 @@
         <section class="hero" id="more">
             <div class="grid-container">
                 <div>
-                    <h2>Quick Links</h2>
+                    <h1 class="header">Quick Links</h1>
                 </div>  
                 <div>
                     <ul class="bio-list">
@@ -72,7 +72,7 @@
                     </ul>
                 </div>  
                 <div>
-                    <h2>More about me!</h2>
+                    <h1 class="header">More about me!</h1>
                 </div>
                 <div class="bio-grid">
                     <h3>I am..</h3>
@@ -115,11 +115,12 @@
                     <i class="fa-regular fa-envelope fa-2xl"></i>
                 </a>
             </div>
-            <p class="copy">&copy; 2024 Jocelyn Chen</p>
+            <p class="secondary footer-copy">beep boop beep by Jocelyn</p>
+            <p class="secondary footer-copy">&copy; 2024 Jocelyn Chen</p>
         </footer>
 
         <!-- Website scripts -->
-        <script src="assets/js/app.js"></script>
+        <script src="../assets/js/app.js"></script>
 
         <!-- Ion icons scripts -->
         <script
