--- a/robert-half-digital-modernization/index.html
+++ b/robert-half-digital-modernization/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
-        <title>UW CERSE STEM Equity Resource Hub | Jocelyn Chen's Portfolio</title>
+        <title>Robert Half Digital Modernization | Jocelyn Chen's Portfolio</title>
   </head>
 
   <body>
@@ -32,27 +32,24 @@
         
         <!-- Hero Section -->
         <section class="hero" id="about">
-            <p>project img here</p>
-            <h1>UW CERSE</h1>
-            <h3>UW SERCH &#40;STEM Equity Resource Community Hub &#41;, a virtual extension of the UW LSAMP Center</h3>
+            <img
+            src=""
+            alt=""
+            loading="lazy"
+            class=""
+            />
+            <h1>Robert Half</h1>
+            <h3>Digital Service Products Modernization</h3>
             <p>
-                For my HCDE Senior Capstone, my team and I partnered with the <b>UW Center for Evaluation & 
-                Research for STEM Equity (CERSE)</b>, a research center. The focus of our capstone project was 
-                to produce an interactive platform to connect students, staff, and faculty to campus resources 
-                supporting equitable student success in STEM.
+                In summer 2022, I worked a Business Transformation Intern at Robert Half, and I took on various initiatives to improve the 
+                user experience of the Candidate and Candidates who use Robert Half services.<br>
+                Besides working on reinventing the existing Client and Candidate digital service products, I also spearheaded a project with 
+                two other design interns to brainstorm and plan Robert Half's inaugural Usability Day event. 
             </p>
             <div class="project-context">
                 <div class="project-timeframe">
                     <p><b>Timeframe</b></p>
-                    <p>January 2023 - June 2023</p>
-                </div>
-                <div class="project-team">
-                    <p><b>Team</b></p>
-                    <ul>
-                        <li>Rachel Chang</li>
-                        <li>Kayal Rajkumar</li>
-                        <li>Shreya Senthil</li>
-                    </ul>
+                    <p>June 2022 - August 2022</p>
                 </div>
                 <div class="project-contributions">
                     <p><b>Key Contributions</b></p>
@@ -65,7 +62,7 @@
             </div>
             <div class="project-overview">
                 <p>Client Context</p>
-                <p>img of pnw lsamp schools</p>
+                <img>
                 <p>UW CERSE is a team of researchers who focus on conducting research to improve equity and broaden representation 
                     in STEM fields in higher education. Their research is currently focusing on <b>PNW LSAMP (the Pacific Northwest 
                     Louis Stokes Alliance for Minority Participation)</b>, which includes the University of Washington, 
@@ -75,11 +72,10 @@
                     
                 </p>
             </div>
-            <div class="design-question">
-                <p>Design Question</p>
-                <p>How might we ... ?
-                </p>
-            </div>
+
+
+
+
         </section>
 
         <!-- Scroll to top -->
@@ -97,7 +93,8 @@
                     <i class="fa-regular fa-envelope fa-2xl"></i>
                 </a>
             </div>
-            <p class="copy">&copy; 2024 Jocelyn Chen</p>
+            <p class="secondary footer-copy">beep boop beep by Jocelyn</p>
+            <p class="secondary footer-copy">&copy; 2024 Jocelyn Chen</p>
         </footer>
 
         <!-- Website scripts -->
