--- a/template.html
+++ b/template.html
@@ -52,7 +52,8 @@
                     <i class="fa-regular fa-envelope fa-2xl"></i>
                 </a>
             </div>
-            <p class="copy">&copy; 2024 Jocelyn Chen</p>
+            <p class="secondary footer-copy">beep boop beep by Jocelyn</p>
+            <p class="secondary footer-copy">&copy; 2024 Jocelyn Chen</p>
         </footer>
 
         <!-- Website scripts -->
