revise research findings

--- a/uw-cerse-stem-equity-resource-hub/index.html
+++ b/uw-cerse-stem-equity-resource-hub/index.html
@@ -456,13 +456,13 @@
                     <div class="findings-recommendations-container">
                         <div class="findings-container column no-bottom-border">
                             <h3>Motivation</h3>
-                            <p>Students and staff emphasized the importance of highlighting students' backgrounds, goals, and 
+                            <p>Students and staff emphasized the importance of highlighting students' diverse backgrounds, goals, and 
                                 apsirations while seeking out STEM-related resources.
                             </p>                        
                         </div>
                         <div class="recommendations-container column no-bottom-border">
-                            <h3>Inclusive platform</h3>
-                            <p>Personalized profile page to cross-check resources being sought.</p>
+                            <h3>Tailored profile</h3>
+                            <p>Personalized profile page to cross-check resources being sought, fulfilling the unique desires and needs of each user.</p>
                         </div>
                     </div>
                 </div>
