work on uw cerse case study

--- a/about/index.html
+++ b/about/index.html
@@ -65,10 +65,10 @@
                 </div>  
                 <div>
                     <ul class="bio-list">
-                        <li><a href="https://www.linkedin.com/in/jocelyn-chen-/" class="link">LinkedIn</a></li>
-                        <li><a href="mailto: jocelynchen1126@gmail.com" class="link">Email</a></li>
-                        <li><a href="https://github.com/jclync" class="link">Coding Projects</a></li>
-                        <li><a href="" class="link">Resume</a></li>
+                        <li><a href="https://www.linkedin.com/in/jocelyn-chen-/" class="secondary link">LinkedIn&#8599;</a></li>
+                        <li><a href="mailto: jocelynchen1126@gmail.com" class="secondary link">Email&#8599;</a></li>
+                        <li><a href="https://github.com/jclync" class="secondary link">Coding Projects&#8599;</a></li>
+                        <li><a href="" class="secondary link">Resume&#8599;</a></li>
                     </ul>
                 </div>  
                 <div>
@@ -105,6 +105,13 @@
             <i class="fa-solid fa-circle-chevron-up fa-2xl"></i>
         </i>
 
+        <!-- <section class="lets-connect">
+            <h2>Let's work together</h2>
+            <p>If you would like to chat, shoot me an email at<br>
+                <a href="mailto: jocelynchen1126@gmail.com" target="_blank" class="footer-icon">jocelynchen1126@gmail.com</a>. I'd love to hear from you ◡̈
+            </p>
+        </section> -->
+        
         <!-- Footer section -->
         <footer>
             <div class="footer-links">
