--- a/index.html
+++ b/index.html
@@ -16,31 +16,17 @@
         <title>Home | Jocelyn Chen's Portfolio</title>
     </head>
     <body>
-        <!-- Navbar 
-        <nav>
-            <ul class="nav-bar">
-                <li ><a href="#home" class="home-link">Jocelyn Chen</a></li>
-                <li ><a href="#contact" class="nav-item">Contact</a></li>
-                <li ><a href="#projects" class="nav-item">Projects</a></li>
-                <li ><a href="#about" class="nav-item">About</a></li>
-                <li ><a class="active"></a></li>
-            </ul>
+        <!-- Navbar  -->
+        <div class="navbar" id="navbar-scroll-down">
+            <a href="" class="home-item">Jocelyn Chen</a>
+            <div class="navbar-right">
+                <a href="#projects" class="nav-item">Projects</a>
+                <a href="/about/" class="nav-item">About</a>
+            </div>
             <button class="burger-menu" id="burger-menu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
-        </nav>
-    -->
-        <nav>
-            <a href=".." class="home-item">Jocelyn Chen</a>
-            <ul class="nav-bar">
-                <li ><a href="#projects" class="nav-item">Projects</a></li>
-                <li ><a href="/about/" class="nav-item">About</a></li>
-                <li ><a href="#contact" class="nav-item">Contact</a></li>
-            </ul>
-            <button class="burger-menu" id="burger-menu">
-              <ion-icon class="bars" name="menu-outline"></ion-icon>
-            </button>
-        </nav>
+        </div>
         
         <!-- Hero Section -->
         <section class="hero home-page" id="about">
@@ -61,8 +47,7 @@
                                 class="txt-rotate"
                                 data-period="2000"
                                 data-rotate='[
-                                    "Hello!", 
-                                    "My name is Jocelyn.", 
+                                    "Hello! My name is Jocelyn.", 
                                     "I am a Seattle-based designer.", 
                                     "I recently graduated from the University of Washington", 
                                     "Take a look around and get to know me!" 
