--- a/template.html
+++ b/template.html
@@ -76,3 +76,54 @@
         </script>
     </body>
 </html>
+
+
+<!-- transparent nav bar -->
+<style>
+    #navbar {
+        background-color: transparent;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        transition: top 0.3s;
+        z-index: 1;
+        padding: 0.5rem;
+    }
+
+    #navbar a, #navbar-scroll-down a {
+        float: right;
+        color: var(--primary-color);
+        display: block;
+        text-align: center;
+        padding: 1.3rem;
+        text-decoration: none;
+        font-weight: var(--bold-font);
+        border-radius: 2ch;
+    }
+
+    #navbar a.home-item, #navbar-scroll-down a.home-item {
+        float: left;
+        display: block;
+        color: var(--primary-color);
+        text-align: center;
+        padding: 1.3rem;
+        text-decoration: none;
+        font-weight: var(--bold-font);
+        border-radius: 2ch;
+    }
+
+    #navbar a.home-item:hover, #navbar-scroll-down a.home-item:hover {
+        color: #d3cbf5;
+        background-color: #ebedf2;
+        transition: 0.3s;
+    }
+
+    #navbar a.active, #navbar-scroll-down a.active {
+        color: #d3cbf5;  
+    }
+
+    #navbar a.nav-item:hover, #navbar-scroll-down a.nav-item:hover {
+        background-color: #ebedf2;
+        transition: 0.3s;
+    }
+</style>
