--- a/index.html
+++ b/index.html
@@ -1,18 +1,196 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet" />
-    <link rel="stylesheet" href="grid_autofit.css" />
-    <link rel="stylesheet" href="./styles.css" />
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <div class="page-container">
-      <h1 class="header">Portfolio</h1>
-    </div>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!--CSS Styles -->
+        <link rel="stylesheet" href="assets/css/styles.css" />
+
+        <!-- Animate CSS CDN -->
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
+        <title>Home | Jocelyn Chen's Portfolio</title>
+    </head>
+    <body class="home-page">
+        <!-- Navbar  -->
+        <div class="navbar" id="navbar-scroll-down">
+            <a href="" class="home-item">Jocelyn Chen</a>
+            <div class="navbar-right">
+                <a href="#projects" class="nav-item">Projects</a>
+                <a href="/about/" class="nav-item">About</a>
+            </div>
+            <button class="burger-menu" id="burger-menu">
+                <ion-icon class="bars" name="menu-outline"></ion-icon>
+            </button>
+        </div>
+        
+        <!-- Hero Section -->
+        <section class="hero home-page section-regular" id="about">
+            <div class="hero-container home-page">
+                <div class="hero-container hello">
+                    <img
+                    src="./assets/images/profile-image.png"
+                    alt="jocelyn-chen"
+                    loading="lazy"
+                    class="hero-img"
+                    />
+                    <div class="home-bio">
+                        <h1>Jocelyn Chen</h1>
+                        <div class="typewriter-text">
+                            <p id="app"></p>
+                        </div>
+                    </div>                 
+                </div>
+                <div class="scroll-down-container">
+                    <a href="#projects" class="scroll-down animate__animated animate__shakeY">
+                        <i class="fa-solid fa-chevron-down fa-2xl"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Projects section -->
+        <section class="projects section-bg-color" id="projects">
+            <h1 class="projects-title">Selected Work &darr;</h1>
+            <div class="project-container div-margin">
+                <a href="/uw-cerse-stem-equity-resource-hub/" target="_self" class="project-link">
+                    <img
+                        src="./assets/images/uw-cerse/home-project-image.png"
+                        alt="UW CERSE STEM Equity Resource Hub Platform"
+                        loading="lazy"
+                        class="project-img"
+                    />
+                </a>
+                <div class="project-info">
+                    <p class="project-sponsor secondary">
+                        UW CERSE / Sponsored Senior Capstone
+                    </p>
+                    <h1 class="project-title">SERCH</h1>
+                    <p class="project-paragraph">
+                        Collaborated with a research team to develop a STEM equity resource discovery platform for university students and staff, 
+                        leveraging research insights to inform strategic design choices.
+                    </p>
+                    <a href="/uw-cerse-stem-equity-resource-hub/" target="_self" class="project-link">
+                        <button class="project button">Read Case Study &#10142;</button>
+                    </a>
+                </div>
+            </div>
+            <div class="project-container div-margin flipped">
+                <div class="project-info">
+                    <p class="project-sponsor secondary">
+                        Robert Half / Summer Internship
+                    </p>
+                    <h1 class="project-title" id="password-protect-title">Digital Service Products Modernization</h1>
+                    <p class="project-paragraph">
+                        Reinventing Client and Candidate Digital Service Products: a cross-functional approach to modernization, user experience enhancement, and business value acceleration.
+                    </p>
+                    <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
+                        <button class="password-protect project button" id="password-protect">Password Protected &#10142;</button>
+                    </a>
+                </div>
+                <a href="/robert-half-digital-modernization/" target="_self" class="project-link">
+                    <img
+                    src="./assets/images/robert-half/home-project-image.png"
+                    alt="Robert Half Summer Internship"
+                    loading="lazy"
+                    class="project-img password-protect"
+                    />
+                </a>
+            </div>
+            <div class="project-container div-margin">
+                <a href="/husky-buddy/" target="_self" class="project-link">
+                    <img
+                        src="./assets/images/husky-buddy/home-project-image.png"
+                        alt=""
+                        loading="lazy"
+                        class="project-img"
+                    />
+                </a>    
+                <div class="project-info">
+                    <p class="project-sponsor secondary">
+                        University of Washington HCDE 318
+                    </p>
+                    <h1 class="project-title">Husky Buddy: Creating Student Connections</h1>
+                    <p class="project-paragraph">
+                        Designed a student-centric mobile app for increased engagement and community-building during online learning.
+                    </p>
+                    <a href="/husky-buddy/" target="_self" class="project-link">
+                        <button class="project button">Read Case Study &#10142;</button>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Playground -->
+        <section class="playground section-regular">
+            <h1>Playground &darr;</h1>
+        </section>
+
+        <!-- Password Protected Content Overlay -->
+        <div class="password-protected-content" id="overlay">
+            <div class="password-form">
+                <i class="close-overlay" id="close-overlay">
+                    <i class="fa-solid fa-x fa-xl"></i>   
+                </i>
+                <h1>Password Protected Case Study</h1>
+                <p class="password-prompt">Please enter the password below.<br>&#40;contact me or check my submitted resume&#41;</p>
+                <input type="password" placeholder="Password" id="password-input" style="margin-bottom:1rem">
+                <button class="submit-button" id="submit-button">Submit</button>
+            </div>
+        </div>
+
+        <!-- Contact section -->
+        <section class="contact-me">
+
+        </section>
+
+        <!-- Scroll to top -->
+        <i class="scroll-up" id="scroll-up">
+            <i class="fa-solid fa-circle-chevron-up fa-2xl"></i>
+        </i>
+
+        <!-- Footer section -->
+        <footer>
+            <div class="two-column">
+                <div class="column">
+                    <h2 class="secondary">Thanks for stopping by!</h2>
+                    <p>If you'd like to connect, send me a message ◡̈</p>
+                    <p class="footer-link secondary">
+                        <a href="mailto: jocelynchen1126@gmail.com" class="link">Email</a> /
+                        <a href="https://www.linkedin.com/in/jocelyn-chen-/" class="link">LinkedIn</a>
+                    </p>
+                </div>
+                <div class="column right-align-text">
+                    <p class="secondary footer-copy">beep boop beep by jocelyn</p>
+                    <p class="secondary footer-copy">&copy; 2024 Jocelyn Chen</p>
+                </div>
+            </div> 
+        </footer>
+        <!-- Typewriter script -->
+        <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+
+        <!-- Website scripts -->
+        <script src="assets/js/app.js"></script>
+        <script type="module" src="assets/js/Node.js"></script>
+
+        <!-- Ion icons scripts -->
+        <script
+            type="module"
+            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js">
+        </script>
+        <script
+            nomodule
+            src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js">
+        </script>
+
+        <!-- Font Awesome icons scripts -->
+        <script 
+            src="https://kit.fontawesome.com/a2a7dc6fc7.js" 
+            crossorigin="anonymous">
+        </script>
+    </body>
 </html>
