update about me

--- a/about/index.html
+++ b/about/index.html
@@ -29,15 +29,17 @@
         </div>
         
         <!-- Hero Section -->
-        <section class="hero section-regular" id="about">
-            <h1 class="header">  Hi again! Here's a little about me..</h1>
+        <section class="hero section-regular" id="about-me">
+            <h1 class="header">Hi again! Here's a little about me..</h1>
             <div class="bio-container">
-                <img
+                <div>
+                    <img
                     src="../assets/images/profile.jpg"
                     alt="Jocelyn wearing coral t-shirt sitting in front of the Eiffel Tower"
                     loading="lazy"
                     class="hero-img"
                 />
+                </div>
                 <div class="bio">
                     <p class="bio-paragraph">
                         I first learned about design when I took a coding class in high school and learned how to use 
