--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <!-- Navbar  -->
         <div class="navbar" id="navbar-scroll-down">
             <a href="" class="home-item">Jocelyn Chen</a>
-            <div class="navbar-right">
+            <div class="navbar-right" id="navbar-right">
                 <a href="#projects" class="nav-item">Projects</a>
                 <a href="/about/" class="nav-item">About</a>
+                <a href="/playground/" class="nav-item">Playground</a>
             </div>
             <button class="burger-menu" id="burger-menu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -128,6 +129,23 @@
         <!-- Playground -->
         <section class="playground section-regular">
             <h1>Playground &darr;</h1>
+            <div class="playground-grid div-margin">
+                <div class="playground-div">
+                    <img 
+                        src="../assets/images/playground/boba-run.png"
+                        alt="Boba Run Game"
+                        loading="lazy"
+                        class="playground-image"
+                    />
+                </div>
+                <div class="playground-div">
+
+                </div>
+                <div class="playground-div">
+
+                </div>
+                <a href="/playground/" class="view-more">View more &rarr;</a>
+            </div>
         </section>
 
         <!-- Password Protected Content Overlay -->
