--- a/husky-buddy/index.html
+++ b/husky-buddy/index.html
@@ -26,6 +26,7 @@
             <div class="navbar-right" id="navbar-right">
                 <a href=".." class="nav-item active">Projects</a>
                 <a href="/about/" class="nav-item">About</a>
+                <a href="/playground/" class="nav-item">Playground</a>
             </div>
             <button class="burger-menu" id="burger-menu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
