--- a/about/index.html
+++ b/about/index.html
@@ -22,6 +22,7 @@
             <div class="navbar-right" id="navbar-right">
                 <a href=".." class="nav-item">Projects</a>
                 <a href="/about/" class="nav-item active">About</a>
+                <a href="/playground/" class="nav-item">Playground</a>
             </div>
             <button class="burger-menu" id="burger-menu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
